Uses django-filter for observations
